2003-07-14  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.[hm]: Added implementation for new methods 
	to add an array of outlets and actions to a class.
	* GormDocument.[hm]: Added GPL notice to top of file .h file
	and made changes in the -parseHeader method to properly
	handle .h files with categories.
	* GormWindowEditor.m: Removed some very old and commented out
	code.

2003-06-29  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormClassManager.m: Added code to send notifications when
	a class is add/deleted.
	* GormPrivate.h: Added declarations for new notifications.
	* Gorm.m: Added actual constants for new notifications.
	* GormFilesOwner.m: Added code to the inspector to receive 
	the notifications and reload the class list when a class 
	is added/deleted.
	
2003-06-29  Gregory John Casamento <greg_casamento@yahoo.com>

        Applied patch submitted by Matt Rice
	* GormDocument.m: Added code to allow multiple selection of
	images and sounds when adding them to a .gorm file.
	Thanks, Matt!!

2003-06-26  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormNSColorWellInspector.gorm: Redid the
	inspector for this..
	* Palettes/2Controls/inspectors.m: Implemented GormColorWellInspector
	to allow the modification of color wells in Gorm.
	* GormFontViewController.m: Added stubbed versions of the methods
	mouseDragged and flagsChanged.

2003-06-25  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormNSProgressIndicatorInspector.gorm: Added
	* Palettes/2Controls/inspector.m: Added 
	GormProgressIndicatorInspector class to handle inspection of
	NSProgressIndicator.  
	* Palettes/2Controls/Makefile: added line to copy the .gorm file.

2003-06-22  Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: parseHeader added logic to prevent the
	addition of outlets/actions with illegal characters when
	importing from a header.  This also prevents a problem